--- a/web_angular2/web/lib/components/modals_components.html
+++ b/web_angular2/web/lib/components/modals_components.html
@@ -1,12 +1,14 @@
 <!-- Modal Core -->
-<div $ngIf="isDisplayed" class="modal fade" id="allModals" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<div *ngIf="!isDisplayed" class="modal-backdrop">
+<div  class="modal fade show" id="allModals" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
-            <login_comp *ngIf="isLoginModal"></login_comp>
+            <login_comp *ngIf="!isLoginModal"></login_comp>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default btn-simple" data-dismiss="modal">Close</button>
                 <button type="button" class="btn btn-info btn-simple">Save</button>
             </div>
         </div>
     </div>
+</div>
 </div>
