--- a/web_angular2/web/lib/components/top_bar_component.html
+++ b/web_angular2/web/lib/components/top_bar_component.html
@@ -27,6 +27,30 @@
                     </ul>
                 </li>
             </ul>
+            <ul *ngIf="isUserConnected" class="nav navbar-nav navbar-right">
+                <li ng-if="isSystemAdmin && adminOption" role="presentation"><a href="#/console">Logs</a></li>
+                <li ng-if="isSystemAdmin && adminOption" role="presentation"><a href="#/users">Users Administration</a></li>
+                <li class="navbar-brand">Welcome {{currentUser.name}}</li>
+                <li class="dropdown">
+                    <a href="javascript:void(0)" data-target="#" class="dropdown-toggle"
+                       data-toggle="dropdown"
+                       aria-expanded="false">Account <b class="caret"></b>
+
+                        <div class="ripple-wrapper"></div>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#/account">Settings</a></li>
+                        <li><a><label class="checkbox-inline"><input ng-model="adminOption" type="checkbox" value="">Display Admin Options</label></a></li>
+                        <li role="separator" class="divider"></li>
+                        <li><a href="javascript:void(0)" ng-click="logout()">Logout</a></li>
+                    </ul>
+                </li>
+            </ul>
+            <ul *ngIf="!isUserConnected" class="nav navbar-nav navbar-right">
+                <li><a href="javascript:void(0)" data-toggle="modal" (click)="displayLoginPopup()">Login</a></li>
+                <li><a href="javascript:void(0)"  (click)="myModalLabel.show()" data-toggle="modal">Register</a></li>
+
+            </ul>
         </div>
     </div>
 </nav>
