--- a/web_angular2/web/lib/components/app_component.html
+++ b/web_angular2/web/lib/components/app_component.html
@@ -1,5 +1,6 @@
+<modal_comp></modal_comp>
 <top_bar></top_bar>
-
+<!--
 <div class="main main-raised">
     <div class="section">
         <div class="container">
@@ -130,6 +131,5 @@
             </div>
         </div>
     </div>
-</div>
-<modal_comp></modal_comp>
+</div> -->
 <bottom_bar></bottom_bar>
