--- a/web_angular2/web/lib/components/top_bar_component.html
+++ b/web_angular2/web/lib/components/top_bar_component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-fixed-top" role="navigation">
+<nav class="navbar navbar-default" role="navigation">
     <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -46,10 +46,10 @@
                     </ul>
                 </li>
             </ul>
-            <ul *ngIf="!isUserConnected" class="nav navbar-nav navbar-right">
-                <li><a href="javascript:void(0)" data-toggle="modal" (click)="displayLoginPopup()">Login</a></li>
-                <li><a href="javascript:void(0)"  (click)="myModalLabel.show()" data-toggle="modal">Register</a></li>
 
+            <ul *ngIf="!isUserConnected" class="nav navbar-nav navbar-right">
+                <li><a href="javascript:void(0)" data-toggle="modal" data-target="#allModals" (click)="displayLoginPopup()">Login</a></li>
+                <li><a href="javascript:void(0)" data-toggle="modal" data-target="#allModals" (click)="displayRegister()">Register</a></li>
             </ul>
         </div>
     </div>
