--- a/web_angular2/web/lib/components/modals_components.html
+++ b/web_angular2/web/lib/components/modals_components.html
@@ -17,10 +17,8 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <login_comp *ngIf="isLoginModal"></login_comp>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default btn-simple" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-info btn-simple">Save</button>
-            </div>
+            <register_comp *ngIf="isRegisterModal"></register_comp>
+
         </div>
     </div>
 </div>
