--- a/web_angular2/web/lib/components/top_bar_component.html
+++ b/web_angular2/web/lib/components/top_bar_component.html
@@ -48,8 +48,8 @@
             </ul>
 
             <ul *ngIf="!isUserConnected" class="nav navbar-nav navbar-right">
-                <li><a href="javascript:void(0)" data-toggle="modal" data-target="#allModals" (click)="displayLoginPopup()">Login</a></li>
-                <li><a href="javascript:void(0)" data-toggle="modal" data-target="#allModals" (click)="displayRegister()">Register</a></li>
+                <li [ngClass]="isLoginModal? 'active ': ''"><a href="javascript:void(0)"  data-toggle="modal" data-target="#allModals" (click)="displayLoginPopup()">Login</a></li>
+                <li [ngClass]="isRegisterModal? 'active ': ''"><a href="javascript:void(0)"  data-toggle="modal" data-target="#allModals" (click)="displayRegisterPopup()">Register</a></li>
             </ul>
         </div>
     </div>
