--- a/web_angular2/web/lib/components/user_login_component.html
+++ b/web_angular2/web/lib/components/user_login_component.html
@@ -1,4 +1,45 @@
-
+<div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+    <h4 class="modal-title" id="myModalLabel">Login</h4>
+</div>
+<div class="modal-body">
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="input-group">
+		<span class="input-group-addon">
+            <i class="material-icons">email</i>
+		</span>
+                <div class="form-group label-floating">
+                    <label class="control-label">Email</label>
+                    <input type="email" class="form-control"  [(ngModel)]="email" >
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-12">
+            <div class="input-group">
+		<span class="input-group-addon">
+            <i class="material-icons">vpn_key</i>
+		</span>
+                <div class="form-group label-floating">
+                    <label class="control-label">Password</label>
+                    <input type="email" class="form-control" [(ngModel)]="password">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div>
+        Lost my password ?<button type="button" class="btn btn-default btn-simple btn-sm">Recover</button>
+    </div>
+    <div>
+        Not already a account ?<button type="button" class="btn btn-primary btn-simple btn-sm">Register</button>
+    </div>
+</div>
+<div class="modal-footer">
+    <button type="button" class="btn btn-default btn-simple" data-dismiss="modal">Cancel</button>
+    <button type="button" *ngIf="!isHttpLoading" class="btn btn-primary" (click)="login()"> Login </button>
+    <material-spinner *ngIf="isHttpLoading" ></material-spinner>
+</div>
+<!--
             <div class="modal-body">
                 <form class="form-horizontal" ng-submit="login()">
                     <fieldset>
@@ -33,3 +74,4 @@
                     </div>
                 </form>
             </div>
+-->
