continue angular 2 migration

--- a/web_angular2/web/lib/components/user_login_component.html
+++ b/web_angular2/web/lib/components/user_login_component.html
@@ -33,6 +33,7 @@
     <div>
         Not already a account ?<button type="button" class="btn btn-primary btn-simple btn-sm">Register</button>
     </div>
+    <error_comp [error]="error"></error_comp>
 </div>
 <div class="modal-footer">
     <button type="button" class="btn btn-default btn-simple" data-dismiss="modal">Cancel</button>
