--- a/web_angular2/web/lib/components/app_component.html
+++ b/web_angular2/web/lib/components/app_component.html
@@ -1,6 +1,24 @@
 <modal_comp></modal_comp>
 <top_bar></top_bar>
-<!--
+
+<div class="wrapper" style="padding-top:80px">
+<div class="main main-raised">
+    <div class="section" >
+        <div class="container">
+    <ol class="breadcrumb">
+      <!--  <li ng-repeat="route in routeHistory"><a href="#{{route['path']}}">{{route['name']}}</a></li> -->
+          <li><a href="#/home">Home</a></li>
+          <li><a href="#/apps">Library</a></li>
+          <li class="active">Data</li>
+    </ol>
+    </div>
+        <div class="container">
+            <router-outlet></router-outlet>
+        </div>
+    </div>
+</div>
+</div>
+<!-- <div class="wrapper">
 <div class="main main-raised">
     <div class="section">
         <div class="container">
@@ -131,5 +149,6 @@
             </div>
         </div>
     </div>
-</div> -->
+</div>
+</div>-->
 <bottom_bar></bottom_bar>
