--- a/web_angular2/web/lib/components/top_bar_component.html
+++ b/web_angular2/web/lib/components/top_bar_component.html
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-default" role="navigation">
-    <div class="container">
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <div class="container-fluid">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only">Toggle navigation</span>
@@ -48,8 +48,8 @@
             </ul>
 
             <ul *ngIf="!isUserConnected" class="nav navbar-nav navbar-right">
-                <li [ngClass]="isLoginModal? 'active ': ''"><a href="javascript:void(0)"  data-toggle="modal" data-target="#allModals" (click)="displayLoginPopup()">Login</a></li>
-                <li [ngClass]="isRegisterModal? 'active ': ''"><a href="javascript:void(0)"  data-toggle="modal" data-target="#allModals" (click)="displayRegisterPopup()">Register</a></li>
+                <li ><a href="javascript:void(0)"  data-toggle="modal" data-target="#allModals" (click)="displayLoginPopup()">Login</a></li>
+                <li ><a href="javascript:void(0)"  data-toggle="modal" data-target="#allModals" (click)="displayRegisterPopup()">Register</a></li>
             </ul>
         </div>
     </div>
