continue angular 2 migration

--- a/web_angular2/web/lib/components/modals_components.html
+++ b/web_angular2/web/lib/components/modals_components.html
@@ -16,6 +16,7 @@
 <div class=" modal fade " id="allModals" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" >
     <div class="modal-dialog">
         <div class="modal-content">
+            <button type="button" id="allModalsCloseButton" class="close" data-dismiss="modal" aria-hidden="true"></button>
             <login_comp *ngIf="isLoginModal"></login_comp>
             <register_comp *ngIf="isRegisterModal"></register_comp>
 
