--- a/web_angular2/web/lib/components/top_bar_component.html
+++ b/web_angular2/web/lib/components/top_bar_component.html
@@ -30,7 +30,7 @@
             <ul *ngIf="isUserConnected" class="nav navbar-nav navbar-right">
                 <li ng-if="isSystemAdmin && adminOption" role="presentation"><a href="#/console">Logs</a></li>
                 <li ng-if="isSystemAdmin && adminOption" role="presentation"><a href="#/users">Users Administration</a></li>
-                <li class="navbar-brand">Welcome {{currentUser.name}}</li>
+                <li class="navbar-brand">Welcome {{currentUsername}}</li>
                 <li class="dropdown">
                     <a href="javascript:void(0)" data-target="#" class="dropdown-toggle"
                        data-toggle="dropdown"
