--- a/web_angular2/web/lib/components/user_login_component.html
+++ b/web_angular2/web/lib/components/user_login_component.html
@@ -18,7 +18,7 @@
         <div class="col-lg-12">
             <div class="input-group">
 		<span class="input-group-addon">
-            <i class="material-icons">vpn_key</i>
+            <i class="material-icons">lock_outline</i>
 		</span>
                 <div class="form-group label-floating">
                     <label class="control-label">Password</label>
