--- a/web_angular2/web/lib/components/user_login_component.html
+++ b/web_angular2/web/lib/components/user_login_component.html
@@ -1,3 +1,4 @@
+<form  (ngSubmit)="login()" #loginForm="ngForm">
 <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
     <h4 class="modal-title" id="myModalLabel">Login</h4>
@@ -5,15 +6,17 @@
 <div class="modal-body">
     <div class="row">
         <div class="col-lg-12">
+
             <div class="input-group">
 		<span class="input-group-addon">
             <i class="material-icons">email</i>
 		</span>
                 <div class="form-group label-floating">
                     <label class="control-label">Email</label>
-                    <input type="email" class="form-control"  [(ngModel)]="email" >
+                    <input type="email" class="form-control"  [(ngModel)]="email" autofocus>
                 </div>
             </div>
+
         </div>
         <div class="col-lg-12">
             <div class="input-group">
@@ -22,7 +25,7 @@
 		</span>
                 <div class="form-group label-floating">
                     <label class="control-label">Password</label>
-                    <input type="email" class="form-control" [(ngModel)]="password">
+                    <input type="password" class="form-control" [(ngModel)]="password">
                 </div>
             </div>
         </div>
@@ -37,9 +40,10 @@
 </div>
 <div class="modal-footer">
     <button type="button" class="btn btn-default btn-simple" data-dismiss="modal">Cancel</button>
-    <button type="button" *ngIf="!isHttpLoading" class="btn btn-primary" (click)="login()"> Login </button>
+    <button type="button" *ngIf="!isHttpLoading" class="btn btn-primary" type="submit" click="login()"> Login </button>
     <material-spinner *ngIf="isHttpLoading" ></material-spinner>
 </div>
+</form>
 <!--
             <div class="modal-body">
                 <form class="form-horizontal" ng-submit="login()">
