continue angular 2 migration

--- a/web_angular2/web/assets/css/dashboard.css
+++ b/web_angular2/web/assets/css/dashboard.css
@@ -7,6 +7,7 @@
     border-radius: 3px;
     color: rgba(0,0,0, 0.87);
     background: #fff;
+    //background: #EEEEEE;
 }
 .mdt-card .mdt-card-height-indicator {
     margin-top: 100%;
