--- a/web_angular2/web/lib/components/app_component.html
+++ b/web_angular2/web/lib/components/app_component.html
@@ -5,12 +5,7 @@
 <div class="main main-raised">
     <div class="section" >
         <div class="container">
-    <ol class="breadcrumb">
-      <!--  <li ng-repeat="route in routeHistory"><a href="#{{route['path']}}">{{route['name']}}</a></li> -->
-          <li><a href="#/home">Home</a></li>
-          <li><a href="#/apps">Library</a></li>
-          <li class="active">Data</li>
-    </ol>
+            <route_bar></route_bar>
     </div>
         <div class="container">
             <router-outlet></router-outlet>
