--- a/web_angular2/web/lib/components/route_bar_component.html
+++ b/web_angular2/web/lib/components/route_bar_component.html
@@ -1,3 +1,7 @@
     <ol class="breadcrumb">
-        <li *ngFor="let route of routeHistory"><a href="#{{route['path']}}">{{route['name']}}</a></li>
+        <li *ngFor="let route of routeHistory"> <a routerLink="route['path']" routerLinkActive="route['status']">{{route['name']}}</a></li>
     </ol>
+
+
+
+    <!-- <a href="#{{route['path']}}">{{route['name']}}</a> -->
