--- a/web_angular2/web/lib/components/artifact_component.html
+++ b/web_angular2/web/lib/components/artifact_component.html
@@ -1,25 +1,24 @@
-<div>
+<div *ngIf="artifact!=null">
     <div>
-        <table class="table">
+        <table class="table no_margin_bottom">
             <tr>
-                <td>
-                    <span class="label label-info ">{{artifact.name}}</span>
+                <td><span class="label label-info ">{{artifact.name}}</span></td>
+                <td class="text-left">
+
                     <span>
-             {{artifactSize}} Mo - <small> Created: {{artifact.creationDate | date:'mediumDate'}}</small>
+             {{artifactSize}} Mo <br/> <small> Created: {{artifact.creationDate | date:'mediumDate'}}</small>
         </span>
                 </td>
                 <td class="td-actions text-right">
-                        <material-button icon><glyph icon="crop_free"></glyph></material-button>
-                        <material-button icon><glyph icon="get_app"></glyph></material-button>
-                        <material-button icon (click)="isCollapsed = !isCollapsed" >
-                            <glyph icon="more_vert"></glyph>
-                        </material-button>
+                        <material-button (click)="generateQrCode()" icon><glyph icon="crop_free"></glyph></material-button>
+                        <material-button (click)="downloadOrInstall()" icon><glyph icon="get_app"></glyph></material-button>
+                        <material-button (click)="isCollapsed = !isCollapsed" icon ><glyph icon="more_vert"></glyph></material-button>
+                        <material-button class="admin_button" (click)="deleteArtifact()" icon *ngIf="canDelete"><glyph icon="delete"></glyph></material-button>
                 </td>
             </tr>
         </table>
     </div>
-    <div *ngIf="!isCollapsed">
-        <div class="card-content table-responsive">
+    <div *ngIf="!isCollapsed" class="card-content table-responsive">
             <table class="table">
                 <thead class="text-primary">
                 <tr><th>Key</th>
@@ -31,10 +30,8 @@
                 </tr>
                 </tbody>
             </table>
-
-        </div>
     </div>
-
+<!--
         <material-fab raised class="qr-code-button">
             <img href="../../images/qrcode_black.png"/>
         </material-fab>
@@ -43,6 +40,5 @@
         <a ngClass="canInstall ? '' : 'hidden'" type="button" (click)="installArtifact()"  class=" btn btn-raised btn-default" aria-hidden="true"><i class="material-icons">file_download</i> Install</a>
         <a type="button" (click)="isCollapsed = !isCollapsed" class="btn btn-raised btn-default"><i class="material-icons">more_vert</i></a>
         <button type="button" (click)="deleteArtifact()" *ngIf="canDelete" class="btn btn-xs btn-flat btn-danger"><i class="material-icons">delete</i> Delete</button>
-
-    <hr *ngIf="isLast" />
+-->
 </div>
