continue angular 2 migration

--- a/web_angular2/web/lib/components/route_bar_component.html
+++ b/web_angular2/web/lib/components/route_bar_component.html
@@ -1,5 +1,8 @@
     <ol class="breadcrumb">
-        <li *ngFor="let route of routeHistory"> <a routerLink="route['path']" routerLinkActive="route['status']">{{route['name']}}</a></li>
+        <li *ngFor="let route of routeHistory">
+            <a [routerLink]="routerLink(route['name'],route['params'])">{{route['displayname']}}
+            </a>
+        </li>
     </ol>
 
 
