--- a/web_angular2/web/lib/components/top_bar_component.html
+++ b/web_angular2/web/lib/components/top_bar_component.html
@@ -42,9 +42,9 @@
                     </a>
                     <ul class="dropdown-menu">
                         <li><a href="#/account">Settings</a></li>
-                        <li><a><label class="checkbox-inline"><input ng-model="adminOption" type="checkbox" value="">Display Admin Options</label></a></li>
+                        <li><a><label class="checkbox-inline"><input [(ngModel)]="adminOption" type="checkbox" value="">Display Admin Options</label></a></li>
                         <li role="separator" class="divider"></li>
-                        <li><a href="javascript:void(0)" ng-click="logout()">Logout</a></li>
+                        <li><a href="javascript:void(0)" (click)="logout()">Logout</a></li>
                     </ul>
                 </li>
             </ul>
