continue angular 2 refactoring

--- a/web_angular2/web/assets/css/mdt-specific.css
+++ b/web_angular2/web/assets/css/mdt-specific.css
@@ -37,6 +37,21 @@
     margin: 0 0 0px;
 }
 
+material-input .label{
+    text-align: left;
+}
+
+material-input {
+    width: 100%;
+}
+
+.uppercase-label {
+    text-transform: uppercase;
+    font-size: 10px;
+    font-weight: bold;
+    color: rgba(0,0,0,0.54);
+}
+
 .platformandroid {
    // float: left;
     //vertical-align:middle;
